# CSD2

./: CMakeLists.txt
CSD2a/eventBasedSequencer/doc/: README.md
CSD2a/eventBasedSequencer/src/: eventBasedSequencer.py  eventBasedSequencer.vim
CSD2a/python_basics/: LES1_GitIntro_Vragen.txt
CSD2a/python_basics/doc/: README.md
CSD2a/rythmicplayback/doc/: README.md
CSD2a/rythmicplayback/src/: rythmicplayback.py
CSD2a/singleSampleSequencer/doc/: README.md
CSD2a/singleSampleSequencer/src/: singleSampleSequencer.py
CSD2b/: CMakeLists.txt  Juce_Test_Instructies.md
CSD2b/InstrumentClass/: Instrument.h  class.cpp
CSD2b/JuceTest/: CMakeLists.txt  main.cpp
CSD2b/session1/InstrumentClass/: Instrument.h  main  main.cpp  makefile
CSD2b/session1/bookClass/: a.out  bookClass.cpp
CSD2b/session1/roomClass/: RoomClassDetails  a.out  roomClass  roomClass.cpp
CSD2b/session1/speaker/: a.out  main.cpp
CSD2b/session1/test/class/: a.out
CSD2b/session1/test/classroom/: a.out  classroom.cpp
CSD2b/session2/test/cmake/: CMakeLists.txt  Instrument.cpp
CSD2b/session3/: CMakeLists.txt
CSD2b/session3/01_sine/: CMakeLists.txt  main.cpp
CSD2b/test/HelloWorld/: a.out  hello.cpp
CSD2b/test/class/: a.out  class.cpp
python_basics/: helloworld.py  playsound.py  playsound2.py
